traces/bug_690.txt
examples++-load/medit.cpp:1144: error: DEAD_STORE
  The value written to &ddim (type int) is never used.
Showing all 1 steps of the trace


examples++-load/medit.cpp:1144:7: Write of unused value
1142.         boolsave= true;
1143.         saveff = GetAny<string *>( (*nargs[2])(stack) );
1144.         int ddim = 2;
              ^
1145.       
1146.         for (size_t i=0;i<offset;i++){
